8315739: Missing null check in os::vm_min_address

Reviewed-by: dholmes, jvernee